--- a/app/scss/globals/skeleton.scss
+++ b/app/scss/globals/skeleton.scss
@@ -10,6 +10,8 @@ html {
 }
 
 body {
+  height: 58.55em;
   margin: 0;
   padding: 0;
+  background-image: linear-gradient(var(--soft-violet), var(--soft-blue));
 }
