--- a/app/scss/globals/skeleton.scss
+++ b/app/scss/globals/skeleton.scss
@@ -14,4 +14,5 @@ body {
   margin: 0;
   padding: 0;
   background-image: linear-gradient(var(--soft-violet), var(--soft-blue));
+  background-repeat: no-repeat;
 }
